<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">YoyoApp</string>
    <string name="user">User</string>
    <string name="logo">YOYO APP</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="inventory">Inventory</string>
    <string name="products">Products</string>
    <string name="stock">Stock</string>
    <string name="add">Add</string>
    <string name="maxstock">Fill to Maximum</string>
    <string name="refillItems">Refill Items</string>
    <string name="Accept">Accept</string>
    <string name="clients">Clients</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="Return">Return</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="search_invoice">Search Invoice</string>
    <string name="invoiceNumber">Invoice Number</string>
    <string name="client">Client</string>
    <string name="Total">Total</string>
    <string name="cancel">Cancel</string>
    <string name="print">Print</string>
    <string name="billing">Billing</string>
    <string name="numberbilling">Invoice Number</string>
    <string name="date">Date</string>
    <string name="subtotal">Sub-Total</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="take_photo">Take Photo</string>


</resources>
